fix: vertical overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -39,4 +43,8 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.chat-input {
+  width: inherit;
 }
